# status_vuln_new

./: .gitignore  CLAUDE.md  CURRENT_STAGE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
knowledge_base/: config.py  main.py
knowledge_base/gui/: main_window.py  rule_editor.py  rule_tester.py  rules_table.py
knowledge_base/gui/styles/: theme.qss
matcher/: config.py  main.py
matcher/core/: exact_matcher.py  fuzzy_matcher.py  normalizer.py  pipeline.py  preprocessor.py  scorer.py  status_assigner.py  vectorizer.py
matcher/gui/: column_config.py  file_loader.py  main_window.py  progress_view.py  results_view.py  settings_panel.py
matcher/gui/styles/: theme.qss
matcher/io/: readers.py  report_writer.py
scripts/: _template.py  clean_microsoft.py  clean_versions.py  split_fstek.py  split_multiproduct.py
shared/: constants.py  types.py
shared/db/: models.py  repository.py
shared/gui/: easter_eggs.py  marquee_header.py
shared/themes/: __init__.py  base.qss  generator.py
tests/: test_exact_matcher.py  test_fuzzy_matcher.py  test_knowledge_base.py  test_normalizer.py  test_pipeline.py  test_preprocessor.py  test_readers.py  test_repository.py  test_scorer.py  test_scripts.py  test_status_assigner.py  test_vectorizer.py
