[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vuln-analyzer"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "rapidfuzz>=3.0",
    "transliterate>=1.10",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S101"]
